# arxiv-reader

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
src/arxiv_astro/: __init__.py  arxiv_client.py  cache.py  cli.py  cli_render.py  content_io.py  content_loader.py  content_pipeline.py  explain_pipeline.py  figure_downloader.py  http_client.py  live_view.py  llm_client.py  local_server.py  metadata_io.py  models.py  normalize.py  paper_store.py  pdf_parser.py  pipeline.py  report.py  selection.py  settings.py  workflows.py  writer.py
src/arxiv_astro/llm_tasks/: __init__.py  base.py  paper_interpretation.py  paper_selection.py
src/arxiv_astro/templates/: report.html.j2
tests/: conftest.py  test_arxiv_client.py  test_cli_render.py  test_content_loader.py  test_figure_downloader.py  test_http_client.py  test_live_view.py  test_llm_client.py  test_local_server.py  test_metadata_content_pipeline.py  test_paper_store.py  test_pipeline_writer_cli.py  test_report.py  test_selection.py  test_workflows.py
tests/integration/: test_real_network.py
