[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "arxiv-astro"
version = "0.1.0"
description = "Fetch arXiv papers and normalize LLM interpretations into data blocks."
requires-python = ">=3.11"
dependencies = [
  "arxiv>=4.0",
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pymupdf>=1.24",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[project.scripts]
arxiv-astro = "arxiv_astro.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov=arxiv_astro --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["arxiv_astro"]

[tool.coverage.report]
exclude_also = [
  "if __name__ == .__main__.:",
  "raise SystemExit",
]
